--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="index.html" class="active">首页</a></li>
       <li><a href="about.html">关于我们</a></li>
       <li><a href="contact.html">联系我们</a></li>
+      <li><a href="https://web.infinityssz.top/#/">附件表搭建网站所需工具</a></li>
     </ul>
   </nav>
 
@@ -38,4 +39,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
